--- a/index.html
+++ b/index.html
@@ -150,27 +150,27 @@
               <input type="checkbox" id="enable-low-density-labeling" name="enable-low-density-labeling" />
               <label for="enable-low-density-labeling">Enable Low Density Cluster Labeling &amp; Segmentation</label>
             </div>
-            <!-- NEW: Low Density Grid-Size Slider -->
+            <!-- Low Density Grid-Size Slider -->
             <div class="filter-item">
               <label for="low-density-grid-slider">Grid Subdivision:</label>
               <input 
                 type="range" 
                 id="low-density-grid-slider" 
                 name="low-density-grid-size" 
-                min="1" 
-                max="4" 
-                step="0.1" 
-                value="2" 
+                min="0.01" 
+                max="100" 
+                step="0.01" 
+                value="1" 
                 disabled
               />
               <input 
                 type="number" 
                 id="low-density-grid-number" 
                 name="low-density-grid-size" 
-                min="1" 
-                max="4" 
-                step="0.1" 
-                value="2" 
+                min="0.01" 
+                max="100" 
+                step="0.01" 
+                value="1" 
                 disabled
               />
             </div>
@@ -200,27 +200,27 @@
               <input type="checkbox" id="enable-high-density-labeling" name="enable-high-density-labeling" />
               <label for="enable-high-density-labeling">Enable High Density Cluster Labeling &amp; Segmentation</label>
             </div>
-            <!-- NEW: High Density Grid-Size Slider -->
+            <!-- High Density Grid-Size Slider -->
             <div class="filter-item">
               <label for="high-density-grid-slider">Grid Subdivision:</label>
               <input 
                 type="range" 
                 id="high-density-grid-slider" 
                 name="high-density-grid-size" 
-                min="1" 
-                max="4" 
-                step="0.1" 
-                value="2" 
+                min="0.01" 
+                max="100" 
+                step="0.01" 
+                value="1" 
                 disabled
               />
               <input 
                 type="number" 
                 id="high-density-grid-number" 
                 name="high-density-grid-size" 
-                min="1" 
-                max="4" 
-                step="0.1" 
-                value="2" 
+                min="0.01" 
+                max="100" 
+                step="0.01" 
+                value="1" 
                 disabled
               />
             </div>
