--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
               <label>Ignore this many closest stars: <span id="low-tolerance-value">0</span></label>
               <input type="range" id="low-tolerance-slider" name="low-tolerance" min="0" max="10" value="0" disabled />
             </div>
-            <!-- Low Density Cluster Labeling & Segmentation toggle -->
             <div class="filter-item">
               <input type="checkbox" id="enable-low-density-labeling" name="enable-low-density-labeling" />
               <label for="enable-low-density-labeling">Enable Low Density Cluster Labeling &amp; Segmentation</label>
@@ -163,6 +162,7 @@
                 step="1" 
                 value="0" 
                 disabled
+                style="width: 200px;"
               />
               <!-- Number input shows the actual grid subdivision value -->
               <input 
@@ -174,6 +174,7 @@
                 step="any" 
                 value="1" 
                 disabled
+                style="width: 60px;"
               />
             </div>
           </div>
@@ -197,7 +198,6 @@
               <label>Ignore this many closest stars: <span id="high-tolerance-value">0</span></label>
               <input type="range" id="high-tolerance-slider" name="high-tolerance" min="0" max="10" value="0" disabled />
             </div>
-            <!-- High Density Cluster Labeling & Segmentation toggle -->
             <div class="filter-item">
               <input type="checkbox" id="enable-high-density-labeling" name="enable-high-density-labeling" />
               <label for="enable-high-density-labeling">Enable High Density Cluster Labeling &amp; Segmentation</label>
@@ -214,6 +214,7 @@
                 step="1" 
                 value="0" 
                 disabled
+                style="width: 200px;"
               />
               <input 
                 type="number" 
@@ -224,6 +225,7 @@
                 step="any" 
                 value="1" 
                 disabled
+                style="width: 60px;"
               />
             </div>
           </div>
@@ -233,14 +235,11 @@
 
     <!-- Maps Section -->
     <section class="maps-section">
-      <!-- True Coordinates Map -->
       <div class="map-container">
         <h2>True Coordinates Map</h2>
         <button class="fullscreen-btn" aria-label="Fullscreen True Coordinates Map">⤢</button>
         <canvas id="map3D"></canvas>
       </div>
-
-      <!-- Globe Map -->
       <div class="map-container">
         <h2>Globe Map</h2>
         <button class="fullscreen-btn" aria-label="Fullscreen Globe Map">⤢</button>
@@ -280,7 +279,6 @@
       return Math.round(gridVal) - 1;
     }
 
-    // Wrap event listener setup to ensure DOM elements exist
     document.addEventListener('DOMContentLoaded', function() {
 
       // Toggle sidebar menu on mobile
@@ -402,10 +400,4 @@
             canvas.style.width = "";
             canvas.style.height = "";
           });
-          window.dispatchEvent(new Event('resize'));
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+          window.di
